data_loader complte
data_loader 코드 완성,

이 코드를 통해 timesformer, stgcn의 임베딩 추출이 자동으로 가능해짐

--- a/golf/fusion/data_loader.ipynb
+++ b/golf/fusion/data_loader.ipynb
@@ -12,22 +12,8 @@
      "text": [
       "▶ 392 train / 44 valid IDs saved\n",
       "▶ PKL created: train=392, valid=44\n",
-      "[RUN] conda run -n timesformer --no-capture-output python -u extract_embedding_timesformer.py --root D:\\golfDataset\\dataset\\train --train-list train_ids.txt --valid-list valid_ids.txt --pretrained D:\\timesformer\\pretrained\\TimeSformer_divST_96x4_224_K600.pyth --output-dir embbeding_data\\timesformer\n",
-      "[RUN] conda run -n mmaction --no-capture-output python extract_embedding_stgcn.py --csv-root D:\\golfDataset\\dataset\\train --train-list train_ids.txt --valid-list valid_ids.txt --cfg configs/skeleton/stgcnpp/my_stgcnpp.py --ckpt checkpoints/stgcnpp_best.pth\n"
-     ]
-    },
-    {
-     "ename": "CalledProcessError",
-     "evalue": "Command '['conda', 'run', '-n', 'mmaction', '--no-capture-output', 'python', 'extract_embedding_stgcn.py', '--csv-root', 'D:\\\\golfDataset\\\\dataset\\\\train', '--train-list', 'train_ids.txt', '--valid-list', 'valid_ids.txt', '--cfg', 'configs/skeleton/stgcnpp/my_stgcnpp.py', '--ckpt', 'checkpoints/stgcnpp_best.pth']' returned non-zero exit status 2.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 163\u001b[0m\n\u001b[0;32m    160\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m✅ All done.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    162\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m--> 163\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[1], line 159\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m    147\u001b[0m \u001b[38;5;66;03m# 4) embed extraction\u001b[39;00m\n\u001b[0;32m    148\u001b[0m \u001b[38;5;66;03m# 4) embed extraction\u001b[39;00m\n\u001b[0;32m    149\u001b[0m run([\n\u001b[0;32m    150\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpython\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-u\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mextract_embedding_timesformer.py\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m    151\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m--root\u001b[39m\u001b[38;5;124m'\u001b[39m,       \u001b[38;5;28mstr\u001b[39m(ROOT),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    155\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m--output-dir\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124membbeding_data\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mtimesformer\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    156\u001b[0m ], TS_ENV)\n\u001b[1;32m--> 159\u001b[0m \u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpython\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mextract_embedding_stgcn.py\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--csv-root\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mROOT\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--train-list\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtrain_list\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--valid-list\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mvalid_list\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--cfg\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mconfigs/skeleton/stgcnpp/my_stgcnpp.py\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m--ckpt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcheckpoints/stgcnpp_best.pth\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSTGCN_ENV\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    160\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m✅ All done.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[1], line 39\u001b[0m, in \u001b[0;36mrun\u001b[1;34m(cmd, env)\u001b[0m\n\u001b[0;32m     37\u001b[0m full \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconda\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrun\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-n\u001b[39m\u001b[38;5;124m'\u001b[39m, env, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m--no-capture-output\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m+\u001b[39m cmd\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[RUN]\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m*\u001b[39mfull)\n\u001b[1;32m---> 39\u001b[0m \u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfull\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcheck\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\qqppq\\anaconda3\\envs\\mmaction\\lib\\subprocess.py:516\u001b[0m, in \u001b[0;36mrun\u001b[1;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[0;32m    514\u001b[0m     retcode \u001b[38;5;241m=\u001b[39m process\u001b[38;5;241m.\u001b[39mpoll()\n\u001b[0;32m    515\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m check \u001b[38;5;129;01mand\u001b[39;00m retcode:\n\u001b[1;32m--> 516\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(retcode, process\u001b[38;5;241m.\u001b[39margs,\n\u001b[0;32m    517\u001b[0m                                  output\u001b[38;5;241m=\u001b[39mstdout, stderr\u001b[38;5;241m=\u001b[39mstderr)\n\u001b[0;32m    518\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m CompletedProcess(process\u001b[38;5;241m.\u001b[39margs, retcode, stdout, stderr)\n",
-      "\u001b[1;31mCalledProcessError\u001b[0m: Command '['conda', 'run', '-n', 'mmaction', '--no-capture-output', 'python', 'extract_embedding_stgcn.py', '--csv-root', 'D:\\\\golfDataset\\\\dataset\\\\train', '--train-list', 'train_ids.txt', '--valid-list', 'valid_ids.txt', '--cfg', 'configs/skeleton/stgcnpp/my_stgcnpp.py', '--ckpt', 'checkpoints/stgcnpp_best.pth']' returned non-zero exit status 2."
+      "D:\\golfDataset\\dataset\\train\\crop_pkl\\skeleton_dataset_train.pkl D:\\golfDataset\\dataset\\train\\crop_pkl\\skeleton_dataset_valid.pkl\n",
+      "[RUN] conda run -n mmaction --no-capture-output python -u D:\\Jabez\\golf\\fusion\\extract_embedding_stgcn.py --cfg D:\\mmaction2\\configs\\skeleton\\stgcnpp\\my_stgcnpp.py --ckpt D:\\mmaction2\\checkpoints\\stgcnpp_8xb16-joint-u100-80e_ntu60-xsub-keypoint-2d_20221228-86e1e77a.pth --device cuda:0 --out-dir D:\\Jabez\\golf\\fusion\\embbeding_data\\stgcnpp --train-pkl D:\\golfDataset\\dataset\\train\\crop_pkl\\skeleton_dataset_train.pkl --valid-pkl D:\\golfDataset\\dataset\\train\\crop_pkl\\skeleton_dataset_valid.pkl --num-workers 0\n"
      ]
     }
    ],
@@ -36,7 +22,7 @@
     "\"\"\"\n",
     "parent_split_and_run.py\n",
     "\n",
-    "1) D:\\golfDataset\\dataset\\train 폴더 내 CSV 이름으로 ID 수집 → 90:10 split\n",
+    "1) D:\\golfDataset\\dataset\\train 내 CSV 이름으로 ID 수집 → 90:10 split\n",
     "2) train_ids.txt / valid_ids.txt 생성\n",
     "3) train/valid 각각 PKL(annotations + split) 생성\n",
     "4) extract_embedding_timesformer.py, extract_embedding_stgcn.py 호출하여 임베딩 추출\n",
@@ -77,28 +63,22 @@
     "                     img_shape=(1080,1920),\n",
     "                     confidence_threshold=0.1,\n",
     "                     normalize_method='0to1') -> dict:\n",
-    "    # CSV 로드\n",
     "    df = pd.read_csv(csv_path)\n",
     "    T, cols = df.shape\n",
     "    V25 = 25\n",
-    "    # 초기화\n",
     "    kp25 = np.zeros((1, T, V25, 2), dtype=np.float32)\n",
     "    score25 = np.zeros((1, T, V25), dtype=np.float32)\n",
-    "    # 프레임별로 keypoint 채우기\n",
     "    for t, row in enumerate(df.values):\n",
     "        vals = row.reshape(V25, 3)\n",
-    "        kp25[0, t, :, :] = vals[:, :2]\n",
-    "        score25[0, t, :] = vals[:, 2]\n",
-    "    # confidence threshold\n",
+    "        kp25[0, t] = vals[:, :2]\n",
+    "        score25[0, t] = vals[:, 2]\n",
     "    mask = score25 < confidence_threshold\n",
     "    kp25[mask] = 0\n",
     "    score25[mask] = 0\n",
-    "    # normalize\n",
     "    h, w = img_shape\n",
     "    if normalize_method == '0to1':\n",
     "        kp25[..., 0] /= w\n",
     "        kp25[..., 1] /= h\n",
-    "    # COCO17 선택\n",
     "    kp17 = kp25[:, :, MAPPING_BODY25_TO_COCO17, :]\n",
     "    score17 = score25[:, :, MAPPING_BODY25_TO_COCO17]\n",
     "    return {\n",
@@ -133,7 +113,6 @@
     "            'metainfo': {'frame_dir':vid, 'img_shape':info['img_shape']}\n",
     "        })\n",
     "        annotations.append(info)\n",
-    "    # split 키는 모두 xsub_val (ST-GCN test loader 사용)\n",
     "    data = {'annotations':annotations, 'split':{'xsub_val':id_list}}\n",
     "    out_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "    with open(out_path, 'wb') as f:\n",
@@ -142,7 +121,7 @@
     "\n",
     "\n",
     "def main():\n",
-    "    # 1) ID 수집 및 섞기 (CSV ↔ MP4 매칭)\n",
+    "    # 1) ID 수집 및 split\n",
     "    ids = []\n",
     "    for cat in ['balanced_true','false']:\n",
     "        kp_dir = ROOT / cat / 'crop_keypoint'\n",
@@ -150,54 +129,58 @@
     "        if not kp_dir.exists(): continue\n",
     "        for csv_path in kp_dir.glob('*.csv'):\n",
     "            vid_id = csv_path.stem\n",
-    "            # '_crop.mp4' 파일 검색\n",
-    "            exists_video = False\n",
-    "            for vd in vid_dirs:\n",
-    "                if any(vd.glob(f\"{vid_id}*_crop.mp4\")):\n",
-    "                    exists_video = True\n",
-    "                    break\n",
-    "            if exists_video:\n",
+    "            if any(vd.glob(f\"{vid_id}*_crop.mp4\") for vd in vid_dirs):\n",
     "                ids.append(vid_id)\n",
-    "            else:\n",
-    "                print(f\"[WARN] no video for {vid_id} in {vid_dirs}\")\n",
     "    if not ids:\n",
     "        raise RuntimeError(f\"No matching CSV↔MP4 under {ROOT}\")\n",
-    "    # shuffle & split\n",
     "    random.seed(SEED)\n",
     "    random.shuffle(ids)\n",
     "    idx = int(len(ids)*(1-TEST_RATIO))\n",
     "    train_ids, valid_ids = ids[:idx], ids[idx:]\n",
+    "\n",
     "    # 2) ID 리스트 저장\n",
-    "    train_list = Path('train_ids.txt')\n",
-    "    valid_list = Path('valid_ids.txt')\n",
+    "    train_list = Path('train_ids.txt').resolve()\n",
+    "    valid_list = Path('valid_ids.txt').resolve()\n",
     "    train_list.write_text('\\n'.join(train_ids))\n",
     "    valid_list.write_text('\\n'.join(valid_ids))\n",
     "    print(f\"▶ {len(train_ids)} train / {len(valid_ids)} valid IDs saved\")\n",
+    "\n",
     "    # 3) PKL 생성\n",
     "    base_pkl = ROOT/'crop_pkl'\n",
-    "    tcnt = make_pkl(train_ids, base_pkl/'skeleton_dataset_train.pkl')\n",
-    "    vcnt = make_pkl(valid_ids, base_pkl/'skeleton_dataset_valid.pkl')\n",
+    "    train_pkl = base_pkl/'skeleton_dataset_train.pkl'\n",
+    "    valid_pkl = base_pkl/'skeleton_dataset_valid.pkl'\n",
+    "    tcnt = make_pkl(train_ids, train_pkl)\n",
+    "    vcnt = make_pkl(valid_ids, valid_pkl)\n",
     "    print(f\"▶ PKL created: train={tcnt}, valid={vcnt}\")\n",
-    "    # 4) embed extraction\n",
     "    \"\"\"\n",
+    "    # 4) TimeSformer 임베딩\n",
     "    run([\n",
     "        'python', '-u', 'extract_embedding_timesformer.py',\n",
     "        '--root',       str(ROOT),\n",
     "        '--train-list', str(train_list),\n",
     "        '--valid-list', str(valid_list),\n",
+    "        '--num-frames','32',\n",
+    "        '--clips-per-vid','5',\n",
+    "        '--img-size','224',\n",
+    "        '--batch-size','1',\n",
+    "        '--num-workers','0',\n",
     "        '--pretrained', r\"D:\\timesformer\\pretrained\\TimeSformer_divST_96x4_224_K600.pyth\",\n",
-    "        '--output-dir', r\"embbeding_data\\timesformer\"\n",
+    "        '--output-dir','embbeding_data\\timesformer'\n",
     "    ], TS_ENV)\n",
     "    \"\"\"\n",
-    "\n",
-    "    run(['python','extract_embedding_stgcn.py',\n",
-    "     '--csv-root',   str(ROOT),\n",
-    "     '--train-list', str(train_list),\n",
-    "     '--valid-list', str(valid_list),\n",
-    "     '--cfg',        'configs/skeleton/stgcnpp/my_stgcnpp.py',\n",
-    "     '--ckpt',       'checkpoints/stgcnpp_best.pth',\n",
-    "     '--out-dir',    'embbeding_data/stgcnpp'\n",
+    "    print(str(train_pkl), str(valid_pkl))\n",
+    "    # 5) ST-GCN 임베딩 (PKL 경로 인수로 전달), stgcn의 경우 내부 경로 수정때문에 절대경로로 지정해 줘야한다\n",
+    "    run([\n",
+    "        'python', '-u', 'D:\\\\Jabez\\\\golf\\\\fusion\\\\extract_embedding_stgcn.py',\n",
+    "        '--cfg',        'D:\\\\mmaction2\\\\configs\\\\skeleton\\\\stgcnpp\\\\my_stgcnpp.py',\n",
+    "        '--ckpt',       'D:\\\\mmaction2\\\\checkpoints\\\\stgcnpp_8xb16-joint-u100-80e_ntu60-xsub-keypoint-2d_20221228-86e1e77a.pth',\n",
+    "        '--device',     'cuda:0',\n",
+    "        '--out-dir',    'D:\\\\Jabez\\\\golf\\\\fusion\\\\embbeding_data\\\\stgcnpp',\n",
+    "        '--train-pkl',  str(train_pkl),\n",
+    "        '--valid-pkl',  str(valid_pkl),\n",
+    "        '--num-workers','0'\n",
     "    ], STGCN_ENV)\n",
+    "\n",
     "\n",
     "    print(\"✅ All done.\")\n",
     "\n",
