--- a/golf/fusion/embbeding_data/analysis_stgcnData.ipynb
+++ b/golf/fusion/embbeding_data/analysis_stgcnData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "24ccfc21",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Embeddings shape: (436, 10, 256)\n",
-      "Labels shape:     (436,)\n",
-      "Embedding norms → mean: 0.9745, std: 0.8130\n"
+      "Embeddings shape: (44, 10, 256)\n",
+      "Labels shape:     (44,)\n",
+      "Embedding norms → mean: 0.9712, std: 0.7956\n"
      ]
     }
    ],
@@ -21,10 +21,14 @@
     "import pandas as pd\n",
     "from sklearn.decomposition import PCA\n",
     "import matplotlib.pyplot as plt\n",
+    "from pathlib import Path\n",
+    "\n",
+    "BASE       = Path(r\"D:\\Jabez\\golf\\fusion\\embbeding_data\\stgcnpp\")\n",
+    "SELECT = r\"train\"\n",
     "\n",
     "# 파일 경로 설정\n",
-    "EMB_PATH = \"train_embeddings.npy\"\n",
-    "LABEL_PATH = \"train_labels.npy\"\n",
+    "EMB_PATH = BASE / SELECT / \"embeddings.npy\"\n",
+    "LABEL_PATH = BASE / SELECT / \"labels.npy\"\n",
     "\n",
     "# 1) 데이터 로드\n",
     "embeddings = np.load(EMB_PATH)\n",
