--- a/golf/fusion/embbeding_data/analysis_timesformerData.ipynb
+++ b/golf/fusion/embbeding_data/analysis_timesformerData.ipynb
@@ -10,18 +10,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(393, 2)\n",
-      "(393,)\n"
+      "Embeddings shape: (44, 768)\n",
+      "Labels shape:     (44, 1)\n",
+      "Embedding norms → mean: 25.2649, std: 0.9997\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.decomposition import PCA\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pathlib import Path\n",
     "\n",
-    "X = np.load(\"train_embeddings.npy\")\n",
-    "y = np.load(\"train_labels.npy\")\n",
-    "print(X.shape)  # -> (샘플 개수, 임베딩 차원)\n",
-    "print(y.shape)  # -> (샘플 개수,)\n"
+    "BASE       = Path(r\"D:\\Jabez\\golf\\fusion\\embbeding_data\\timesformer\")\n",
+    "SELECT = r\"train\"\n",
+    "\n",
+    "# 파일 경로 설정\n",
+    "EMB_PATH = BASE / SELECT / \"embeddings.npy\"\n",
+    "LABEL_PATH = BASE / SELECT / \"labels.npy\"\n",
+    "\n",
+    "# 1) 데이터 로드\n",
+    "embeddings = np.load(EMB_PATH)\n",
+    "labels = np.load(LABEL_PATH)\n",
+    "\n",
+    "# 2) 기본 정보 출력\n",
+    "print(f\"Embeddings shape: {embeddings.shape}\")\n",
+    "print(f\"Labels shape:     {labels.shape}\")\n",
+    "\n",
+    "# 3) 클래스 분포 확인\n",
+    "unique, counts = np.unique(labels, return_counts=True)\n",
+    "dist_df = pd.DataFrame({\"class\": unique, \"count\": counts})\n",
+    "\n",
+    "# 4) 임베딩 벡터 노름(길이) 통계\n",
+    "norms = np.linalg.norm(embeddings, axis=1)\n",
+    "print(f\"Embedding norms → mean: {norms.mean():.4f}, std: {norms.std():.4f}\")"
    ]
   },
   {
