train,valid and test task divide
classfier 코드에서
학습,검증 블럭과
test 블럭을 나눔

이에 맞춰 data_loader, extract 코드들도 test 코드 전용으로 변경

--- a/golf/fusion/embbeding_data/analysis_stgcnData.ipynb
+++ b/golf/fusion/embbeding_data/analysis_stgcnData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "24ccfc21",
    "metadata": {},
    "outputs": [
@@ -11,8 +11,15 @@
      "output_type": "stream",
      "text": [
       "Embeddings shape: (392, 10, 256)\n",
-      "Labels shape:     (392, 1)\n",
-      "Embedding norms → mean: nan, std: nan\n"
+      "Labels shape    : (392,)\n",
+      "\n",
+      "Class distribution:\n",
+      "   class  count\n",
+      "0      0    198\n",
+      "1      1    194\n",
+      "\n",
+      "⚠️  NaN 포함 샘플 수: 0 / 392\n",
+      "Embedding norms → mean: 20.0341, std: 2.5646\n"
      ]
     }
    ],
