--- a/golf/fusion/embbeding_data/analysis_timesformerData.ipynb
+++ b/golf/fusion/embbeding_data/analysis_timesformerData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "950b4055",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Embeddings shape: (44, 768)\n",
-      "Labels shape:     (44, 1)\n",
-      "Embedding norms → mean: 25.2649, std: 0.9997\n"
+      "Embeddings shape: (392, 768)\n",
+      "Labels shape    : (392,)\n",
+      "\n",
+      "Class distribution:\n",
+      "   class  count\n",
+      "0      0    198\n",
+      "1      1    194\n",
+      "\n",
+      "⚠️  NaN 포함 샘플 수: 0 / 392\n",
+      "Embedding norms → mean: 25.4468, std: 1.0888\n"
      ]
     }
    ],
@@ -26,24 +33,36 @@
     "BASE       = Path(r\"D:\\Jabez\\golf\\fusion\\embbeding_data\\timesformer\")\n",
     "SELECT = r\"train\"\n",
     "\n",
-    "# 파일 경로 설정\n",
-    "EMB_PATH = BASE / SELECT / \"embeddings.npy\"\n",
+    "EMB_PATH   = BASE / SELECT / \"embeddings.npy\"\n",
     "LABEL_PATH = BASE / SELECT / \"labels.npy\"\n",
     "\n",
     "# 1) 데이터 로드\n",
     "embeddings = np.load(EMB_PATH)\n",
-    "labels = np.load(LABEL_PATH)\n",
+    "labels     = np.squeeze(np.load(LABEL_PATH))\n",
     "\n",
-    "# 2) 기본 정보 출력\n",
+    "# 2) 기본 정보\n",
     "print(f\"Embeddings shape: {embeddings.shape}\")\n",
-    "print(f\"Labels shape:     {labels.shape}\")\n",
+    "print(f\"Labels shape    : {labels.shape}\")\n",
     "\n",
-    "# 3) 클래스 분포 확인\n",
+    "# 3) 클래스 분포\n",
     "unique, counts = np.unique(labels, return_counts=True)\n",
     "dist_df = pd.DataFrame({\"class\": unique, \"count\": counts})\n",
+    "print(\"\\nClass distribution:\")\n",
+    "print(dist_df)\n",
     "\n",
-    "# 4) 임베딩 벡터 노름(길이) 통계\n",
-    "norms = np.linalg.norm(embeddings, axis=1)\n",
+    "# 4) NaN 포함 여부 확인 ------------------------------------\n",
+    "#   → 모든 비특징 차원(axis≥1)에 대해 하나라도 NaN이면 해당 샘플을 True 로 표시\n",
+    "nan_rows = np.isnan(embeddings).any(axis=tuple(range(1, embeddings.ndim)))\n",
+    "num_nan  = nan_rows.sum()\n",
+    "print(f\"\\n⚠️  NaN 포함 샘플 수: {num_nan} / {len(nan_rows)}\")\n",
+    "if num_nan:\n",
+    "    print(\"   예시 인덱스:\", np.where(nan_rows)[0][:10])\n",
+    "\n",
+    "# (선택) NaN을 0으로 바꿔 후속 통계·시각화를 이어가려면:\n",
+    "clean_emb = np.nan_to_num(embeddings, nan=0.0, posinf=0.0, neginf=0.0)\n",
+    "\n",
+    "# 5) 임베딩 노름 통계 (NaN 치환본 사용)\n",
+    "norms = np.linalg.norm(clean_emb.reshape(clean_emb.shape[0], -1), axis=1)\n",
     "print(f\"Embedding norms → mean: {norms.mean():.4f}, std: {norms.std():.4f}\")"
    ]
   },
