action_classfication edit

--- a/golf/preprocessing/analysis/label_analysis.ipynb
+++ b/golf/preprocessing/analysis/label_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c7e44bdd",
    "metadata": {},
    "outputs": [
@@ -11,8 +11,63 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "▶ Swing ID: 20201123_General_030_DOS_A_M40_MM_070  (총 프레임 116개)\n",
-      "   - bad       : 116개  (100.0%)\n"
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_066  (총 프레임 133개)\n",
+      "   - normal    : 133개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_067  (총 프레임 140개)\n",
+      "   - normal    : 140개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_068  (총 프레임 140개)\n",
+      "   - normal    : 140개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_069  (총 프레임 140개)\n",
+      "   - normal    : 140개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_070  (총 프레임 139개)\n",
+      "   - normal    : 139개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_071  (총 프레임 140개)\n",
+      "   - normal    : 140개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_072  (총 프레임 139개)\n",
+      "   - normal    : 139개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_073  (총 프레임 140개)\n",
+      "   - normal    : 140개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_074  (총 프레임 139개)\n",
+      "   - normal    : 139개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_075  (총 프레임 139개)\n",
+      "   - normal    : 139개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_076  (총 프레임 139개)\n",
+      "   - normal    : 139개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_077  (총 프레임 141개)\n",
+      "   - normal    : 141개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_078  (총 프레임 139개)\n",
+      "   - normal    : 139개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_079  (총 프레임 139개)\n",
+      "   - normal    : 139개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_080  (총 프레임 111개)\n",
+      "   - normal    : 111개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_081  (총 프레임 77개)\n",
+      "   - normal    : 77개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_082  (총 프레임 140개)\n",
+      "   - normal    : 139개  ( 99.3%)\n",
+      "   - worst     :  1개  (  0.7%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_083  (총 프레임 139개)\n",
+      "   - normal    : 139개  (100.0%)\n",
+      "\n",
+      "▶ Swing ID: 20201209_General_107_DOS_A_M20_MT_084  (총 프레임 139개)\n",
+      "   - normal    : 139개  (100.0%)\n"
      ]
     }
    ],
