--- a/golf/preprocessing/json_extract/action_classfication.ipynb
+++ b/golf/preprocessing/json_extract/action_classfication.ipynb
@@ -13,23 +13,15 @@
    "execution_count": null,
    "id": "799105c6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "분류 및 복사 완료.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
     "import shutil\n",
     "\n",
     "# 경로 설정\n",
-    "base_path = r\"D:\\golfDataset\\스포츠 사람 동작 영상(골프)\\Training\\Public\\male\"\n",
-    "dataset_base_path = r\"D:\\golfDataset\\dataset\"   # 저장은 다른 접근이 쉬운 dataset 폴더에\n",
+    "base_path = r\"D:\\golfDataset\\스포츠 사람 동작 영상(골프)\\Validation\\Public\\male\"\n",
+    "dataset_base_path = r\"D:\\golfDataset\\dataset\\test\"   # 저장은 다른 접근이 쉬운 dataset 폴더에\n",
     "\n",
     "# 기준\n",
     "true_evaluations = {\"best\", \"good\", \"normal\"}\n",
@@ -171,7 +163,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "golfCNN",
+   "display_name": "classifier_fusion",
    "language": "python",
    "name": "python3"
   },
@@ -185,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
